src/objects/Previous_Experience__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Job_Responsibilities__c</fullName>
        <label>Primary Job Responsibilities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Leaving__c</fullName>
        <label>Reason for Leaving</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruiting_Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recruiting Candidate</label>
        <referenceTo>Recruiting_Candidate__c</referenceTo>
        <relationshipLabel>Previous Experiences</relationshipLabel>
        <relationshipName>Previous_Experiences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Previous Experience</label>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Previous Experiences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>